# playlist-transfer

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml  t
src/: settings.py
src/music_platform_migration.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/playlist_transfer/: __init__.py  exceptions.py  pipeline.py  playlist.py  request_retriever.py  spotify_scraper.py  spotify_scrapper.py  tracks_retriever.py  types.py
src/playlist_transfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/playlist_transfer/spotify/: playlist_scraper.py  track_scraper.py  types.py
src/playlist_transfer/youtube/: types.py  video_loader.py
tests/playlist_transfer/: pipeline_test.py  spotify_scraper_test.py  spotify_scrapper_test.py  youtube_test.py
tests/ressources/: playlist_1.html  track_1.html  youtube_response.json
tests/ressources/tracks/: track_1.html  track_2.html  track_3.html
