[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-transfer"
version = "0.0.1"
authors = [{name = "Vu Trang", email = "tranghoangphongvu@gmail.com"}]
description = "Migrate your music playlists between music services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4 >=4.12.0"
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"
testpaths = [
    "tests",
]

[project.scripts]
hello-world = "playlist_transfer:hello_world"
