[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "playlist-transfer"
version = "0.0.1"
authors = [{name = "Vu Trang", email = "tranghoangphongvu@gmail.com"}]
description = "Migrate your music playlists between music services"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "beautifulsoup4 >=4.12.0",
    "requests >= 2.31.0",
    "python-dotenv",
    # Youtube
    "google-api-python-client", 
    "google-auth-httplib2", 
    "google-auth-oauthlib"
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"
testpaths = [
    "tests",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project.scripts]
spotify-playlist = "playlist_transfer:spotify_playlist"
youtube = "playlist_transfer:youtube_test"
